# canvas-markdown-quiz

./: .gitignore  LICENSE  MANIFEST.in  Readme.md  config_sample.py  generate.py  setup.cfg  setup.py  test.md  test_survey.md
cvs/: command_line.py  default.py  generate.py  initialize.py
examples/: test_quiz_group.md
