[metadata]
name = canvas-markdown-quiz
version = 0.1
description = Markdown support for canvas quiz
long_description = file: Readme.md
long_description_content_type = text/markdown
author = linsyking
author_email = linsy_king@sjtu.edu.cn
keywords = canvas-lms, markdown
url = https://github.com/linsyking/canvas-markdown-quiz
license = MIT License

[options]
python_requires = >=3.6
packages = cvs
install_requires = 
    Markdown
    mdx_math_img>=0.9
    pyyaml
    canvasapi
    pick
